# MNovel

./: .gitignore  README.md  build-apk.bat  build-ipa-github.bat  design-qa.md  implementation_plan.md  task.md  walkthrough.md
.github/workflows/: build-ios-unsigned.yml
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: routes.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: backup.py  database.py
apps/api/app/providers/: base.py  cms_json.py  manager.py
apps/api/app/repositories/: catalog.py
apps/api/app/schemas/: content.py  videos.py
apps/api/app/services/: live_catalog.py  source_guard.py
apps/api/mnovel_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: test_api.py  test_backup.py  test_proxy.py  test_sources.py  test_video_endpoints.py
apps/mobile/: README.md  pubspec.yaml
apps/mobile/android/: build.gradle.kts  gradle.properties
apps/mobile/android/app/: build.gradle.kts
apps/mobile/ios/Runner.xcodeproj/: project.pbxproj
apps/mobile/lib/: main.dart
apps/mobile/test/: bookstore_refresh_test.dart  content_detail_page_test.dart  content_repository_test.dart  discover_list_page_test.dart  local_storage_test.dart  widget_test.dart
apps/mobile/web/: index.html  manifest.json
deploy/: .env.example  compose.yaml  runbook.md
deploy/nginx/: mnovel-ip.conf
deploy/scripts/: backup-sqlite.sh
docs/: ios-windows-sideload.md
docs/architecture/: local-first.md
docs/development/: sdk.md
scripts/: flutter.ps1  verify-mobile.ps1
(+45 files in other folders)
